Edit and get all
